load and display json data

--- a/public/index.html
+++ b/public/index.html
@@ -9,9 +9,10 @@
 </head>
 
 <body>
-    <div class="moving-region" style="background-image: Stedhji_01.jpg;"></div>
+    <div class="moving-region" style="background-image: 'Stedhji_01.jpg';"></div>
+    <div class="value-display"></div>
     <img src="Stedhji_01.jpg" alt="Fullscreen Image" class="fullscreen-image">
-    <script src="scanner.js"></script>
+    <script type="module" src="scanner.js"></script>
     <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
 </body>
 
