--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fullscreen Image with Moving Region</title>
     <link rel="stylesheet" href="style.css">
+    <title>MountainScannerJS</title>
 </head>
 
 <body>
@@ -13,6 +13,7 @@
     <div class="value-display"></div>
     <img src="Stedhji_01.jpg" alt="Fullscreen Image" class="fullscreen-image">
     <script type="module" src="scanner.js"></script>
+    <script type="module" src="./webmidi/dist/esm/webmidi.esm.js"></script>
     <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
 </body>
 
