--- a/public/index.html
+++ b/public/index.html
@@ -9,10 +9,14 @@
 </head>
 
 <body>
-    <div class="moving-region" style="background-image: 'Stedhji_01.jpg';"></div>
+    <canvas id="canvas"></canvas>
+    <div id="movingRegion"></div>
     <div class="value-display"></div>
-    <img src="Stedhji_01.jpg" alt="Fullscreen Image" class="fullscreen-image">
+    <div class="index-display"></div>
+    <img src="silhouettes/Stedhji_01.jpg" alt="Fullscreen Image" id="FullscreenImage">
     <script type="module" src="scanner.js"></script>
+    <script src="image.js"></script>
+    <script type="module" src="canvas.js"></script>
     <script type="module" src="./webmidi/dist/esm/webmidi.esm.js"></script>
     <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
 </body>
