reorganize data and use v to toggle data display

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
     <div class="index-display"></div>
     <img src="silhouettes/Stedhji_01.jpg" alt="Fullscreen Image" id="FullscreenImage">
     <script type="module" src="scanner.js"></script>
-    <script src="image.js"></script>
+    <script type="module" src="data.js"></script>
+    <script type="module" src="image.js"></script>
     <script type="module" src="canvas.js"></script>
     <script type="module" src="./webmidi/dist/esm/webmidi.esm.js"></script>
     <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
