CLASS OBJECTS for everything

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,7 @@
     <div class="value-display"></div>
     <div class="index-display"></div>
     <img src="silhouettes/Stedhji_01.jpg" alt="Fullscreen Image" id="FullscreenImage">
-    <script type="module" src="scanner.js"></script>
-    <script type="module" src="data.js"></script>
-    <script type="module" src="image.js"></script>
-    <script type="module" src="canvas.js"></script>
+    <script type="module" src="fsm.js"></script>
     <script type="module" src="./webmidi/dist/esm/webmidi.esm.js"></script>
     <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
 </body>
