--- a/public/index.html
+++ b/public/index.html
@@ -13,10 +13,13 @@
     <div id="movingRegion"></div>
     <div class="value-display"></div>
     <div class="index-display"></div>
-    <img src="silhouettes/Stedhji_01.jpg" alt="Fullscreen Image" id="FullscreenImage">
+    <img src="silhouettes/Stedhji_01.jpg" alt="Fullscreen Image" id="FullscreenImage" style="display: none;">
+    <div id="navigation">
+    </div>
+    <script async src="opencv.js" type="text/javascript"></script>
     <script type="module" src="fsm.js"></script>
     <script type="module" src="./webmidi/dist/esm/webmidi.esm.js"></script>
-    <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
+        <!-- <img src="Stedhji_01.jpg" width="1920px", alt="Image" class="image"> -->
 </body>
 
 </html>
