--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
     <div id="movingRegion"></div>
     <div class="value-display"></div>
     <div class="index-display"></div>
-    <img src="silhouettes/Stedhji_01.jpg" alt="Fullscreen Image" id="FullscreenImage" style="display: none;">
+    <img alt="Fullscreen Image" id="FullscreenImage" style="display: none;">
     <div id="navigation">
     </div>
     <script async src="opencv.js" type="text/javascript"></script>
