--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,7 @@
     <div class="value-display"></div>
     <div class="index-display"></div>
     <img alt="Fullscreen Image" id="FullscreenImage" style="display: none;">
-    <div id="navigation">
-    </div>
+    <div id="navigation"></div>
     <script async src="opencv.js" type="text/javascript"></script>
     <script type="module" src="fsm.js"></script>
     <script type="module" src="./webmidi/dist/esm/webmidi.esm.js"></script>
